ingress_example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress-enabled
  annotations:
    spyglass/name: "apiName"
    spyglass/endpoint: "discovery"
spec:
  rules:
  - host: test-enabled.local.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
            serviceName: test1
            servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress-disabled
spec:
  rules:
  - host: test-disabled.local.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
            serviceName: test
            servicePort: 80
